# cliff

./: .gitignore  Makefile  Makefile.am  README.md  batch.cc  cliffcairo.cc  cliffcairo.h  cliffimg.cc  cliffsvg.cc  cliffwidget.cc  cliffwidget.h  cliffwindow.cc  cliffwindow.h  configure.ac  default.nix  main.cc  pi.h  test-data.txt  test-output.txt
.github/workflows/: c-cpp.yml
test-output/: cliff.ps
