
#	autoconf file for the cliff visualizer
#
#	Neil Mayhew - 2008-05-04
#
#	$Id: configure.ac,v 1.2 2008-05-05 03:49:42 mayhewn Exp $

AC_INIT([cliff], [0.1], [neil_mayhew@users.sourceforge.net])

AM_INIT_AUTOMAKE(foreign)
AM_MAINTAINER_MODE

AC_PROG_CXX

PKG_CHECK_MODULES([GTKMM], [gtkmm-2.4 >= 2.8.0])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

